@@ -53,7 +53,7 @@ public class MethodASMArrayTest extends TestBase {
 		cw.method("init").code(mv -> {
 			Label l0 = mv.codeNewLabel();
 			mv.visitLabel(l0);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -61,7 +61,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("ba");
 			Label l1 = mv.codeNewLabel();
 			mv.visitLabel(l1);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -69,7 +69,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("ca");
 			Label l2 = mv.codeNewLabel();
 			mv.visitLabel(l2);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -77,7 +77,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("sa");
 			Label l3 = mv.codeNewLabel();
 			mv.visitLabel(l3);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -85,7 +85,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("ia");
 			Label l4 = mv.codeNewLabel();
 			mv.visitLabel(l4);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -93,7 +93,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("la");
 			Label l5 = mv.codeNewLabel();
 			mv.visitLabel(l5);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -101,7 +101,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("fa");
 			Label l6 = mv.codeNewLabel();
 			mv.visitLabel(l6);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -109,7 +109,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("da");
 			Label l7 = mv.codeNewLabel();
 			mv.visitLabel(l7);
-			
+
 			mv.line();
 			mv.LOAD(0);
 			mv.LOADConstByte(10);
@@ -117,7 +117,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.PUTFIELD_OF_THIS("stra");
 			Label l8 = mv.codeNewLabel();
 			mv.visitLabel(l8);
-			
+
 			mv.line();
 			mv.RETURN();
 			Label l9 = mv.codeNewLabel();
@@ -155,7 +155,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.LOAD(0);
 			mv.GET_THIS_FIELD("ia");
 			mv.LOADConstByte(0);
-			mv.LOADConst(new Integer(100000));
+			mv.LOADConst(Integer.valueOf(100000));
 			mv.ARRAYSTORE();
 			Label l4 = mv.codeNewLabel();
 			mv.visitLabel(l4);
@@ -163,7 +163,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.LOAD(0);
 			mv.GET_THIS_FIELD("la");
 			mv.LOADConstByte(0);
-			mv.LOADConst(new Long(1000000L));
+			mv.LOADConst(Long.valueOf(1000000L));
 			mv.ARRAYSTORE();
 			Label l5 = mv.codeNewLabel();
 			mv.visitLabel(l5);
@@ -171,7 +171,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.LOAD(0);
 			mv.GET_THIS_FIELD("fa");
 			mv.LOADConstByte(0);
-			mv.LOADConst(new Float("1.0E7"));
+			mv.LOADConst(Float.valueOf("1.0E7"));
 			mv.ARRAYSTORE();
 			Label l6 = mv.codeNewLabel();
 			mv.visitLabel(l6);
@@ -179,7 +179,7 @@ public class MethodASMArrayTest extends TestBase {
 			mv.LOAD(0);
 			mv.GET_THIS_FIELD("da");
 			mv.LOADConstByte(0);
-			mv.LOADConst(new Double("1.0E8"));
+			mv.LOADConst(Double.valueOf("1.0E8"));
 			mv.ARRAYSTORE();
 			Label l7 = mv.codeNewLabel();
 			mv.visitLabel(l7);
